src/tests/NoArrayIndexKey/invalid/case#3/index.jsx
import React from 'react';

const MeuComponente = (props) => {
    return (
        <div>
            {foo.map((bar, i) => <Foo key={`foo-${i}`} />)}
        </div>
    );
};

export default MeuComponente;

